<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        style="@style/ChatApp.TextAppearance.Large.Bold.Light" />

    <EditText
        style="@style/ChatApp.EditText.Round.Bordered.Transparent"
        android:id="@+id/emailEditTextLogin"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditTextLogin"
        style="@style/ChatApp.EditText.Round.Bordered.Transparent"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/forgotPasswordTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/light"
        style="@style/ChatApp.TextAppearance.Small.Light"/>

    <Button
        android:id="@+id/loginButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        style="@style/ChatApp.Button.Round.Blue" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginRight="3dp"
            style="@style/ChatApp.TextAppearance.Small.Light"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_desc" />

        <TextView
            android:id="@+id/signUpTextViewLogin"
            android:layout_marginRight="3dp"
            style="@style/ChatApp.TextAppearance.Small.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/orange"/>

        <TextView
            style="@style/ChatApp.TextAppearance.Small.Light"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here" />
    </LinearLayout>


</LinearLayout>