<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ChatApp.TextAppearance.Small.Light"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name" />

        <EditText
            android:id="@+id/fistNameEditTextRegister"
            style="@style/ChatApp.EditText.Round.Bordered.Transparent"
            android:layout_width="match_parent"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/firstName" />

        <EditText
            android:id="@+id/lastNameEditTextRegister"
            style="@style/ChatApp.EditText.Round.Bordered.Transparent"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lastName" />

        <TextView
            style="@style/ChatApp.TextAppearance.Small.Light"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/credentials" />

        <EditText
            style="@style/ChatApp.EditText.Round.Bordered.Transparent"
            android:layout_marginTop="10dp"
            android:id="@+id/emailEditTextRegister"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/passwordEditTextRegister"
            style="@style/ChatApp.EditText.Round.Bordered.Transparent"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/confirmPasswordEditTextRegister"
            style="@style/ChatApp.EditText.Round.Bordered.Transparent"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />

        <Button
            android:id="@+id/signUpButtonRegister"
            style="@style/ChatApp.Button.Round.Orange"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/login_desc"
                style="@style/ChatApp.TextAppearance.Small.Light"
                />

            <TextView
                android:id="@+id/loginTextViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="Login"
                android:textColor="@color/blue"
                android:textStyle="bold"
                style="@style/ChatApp.TextAppearance.Small.Light"
                />

            <TextView
                style="@style/ChatApp.TextAppearance.Small.Light"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/here" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>