<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ForgotPasswordActivity">

    <LinearLayout
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/forgot_password"
                android:layout_width="match_parent"
                style="@style/ChatApp.TextAppearance.Medium.Light"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/send_reset_password_email"
                style="@style/ChatApp.TextAppearance.Small.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/ChatApp.EditText.Round.Bordered.Transparent"
                android:ems="10"
                android:id="@+id/emailEditTextForgotPassword"/>
        <Button
                android:text="@string/send"
                android:layout_marginTop="10dp"
                style="@style/ChatApp.Button.Round.Orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sendButtonForgotPassword"/>
    </LinearLayout>
</LinearLayout>